# IMDB-Rotten-Tomatoes---

./: .gitignore  BERT.ipynb  EDA.ipynb  README.md  TFIDF.ipynb  config.yaml  main.py  nltk.ipynb  pyproject.toml  roBERTa.ipynb
src/: __init__.py
src/configs/: __init__.py  config.py
src/training/: __init__.py  evaluator.py  trainer.py
src/utils/: __init__.py  device.py
